# oz_Django_todolist

./: .python-version  db.sqlite3  pyproject.toml
.secret_config/: secret.json
config/: settings.py  urls.py
todo/: cb_views.py  forms.py  models.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_initial.py  0002_todo_user.py  0003_comment.py  0004_todo_completed_image_todo_thumbnail.py
todo/templates/: todo_info.html  todo_list.html
users/: cb_views.py  forms.py  models.py  views.py
users/migrations/: 0001_initial.py
