[tool.poetry]
name = "todo-list-app"
version = "0.1.0"
description = ""
authors = ["kang9805 <zzionkk@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
ipython = "^9.5.0"
django-extensions = "^4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
